--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Rock, Paper, Scissors game developed using NodeJS",
   "main": "index.js",
   "scripts": {
+    "cli": "tsc && node ./build/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,5 +15,11 @@
     "game"
   ],
   "author": "Herman Owens",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^14.10.1",
+    "inquirer": "^7.3.3",
+    "typescript": "^4.0.2"
+  },
+  "devDependencies": {}
 }
