Separates the game class as preparation for extending game to a GUI. Adds a declaration file to describe the Round type. Upgrades typescript target to es2020 to properly handle compilation for the private variable markup introduced in es2015. Configures setup up files for RPS GUI.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Rock, Paper, Scissors game developed using NodeJS",
   "main": "index.js",
   "scripts": {
+    "app": "tsc && node ./build/app.js",
     "cli": "tsc && node ./build/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
